<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <version>0.1.0-SNAPSHOT</version>
    <parent>
        <groupId>me.bechberger</groupId>
        <artifactId>hello-ebpf</artifactId>
        <version>0.1.0-SNAPSHOT</version>
    </parent>

    <artifactId>ebpf-shared</artifactId>
    <description>Code used both in bcc and ebpf</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>me.bechberger</groupId>
            <artifactId>ebpf-annotations</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

</project>